<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Watermark Creator</string>
    <string name="action_pick">Choose picture</string>
    <string name="action_save">Save</string>
    <string name="action_settings">About</string>
    <string name="title_layout">Layout</string>
    <string name="title_style">Style</string>
    <string name="title_content">Content</string>
    <string name="tips_do_not_choose_image">No picture selected</string>
    <string name="tips_choose_color_dialog">Choose color</string>
    <string name="tips_confirm_dialog">Confirm</string>
    <string name="tips_cancel_dialog">Cancel</string>
    <string name="tips_error">Error</string>
    <string name="title_text_style">Style</string>
    <string name="title_text_size">Size</string>
    <string name="title_tile_mode">TileMode</string>
    <string name="title_horizon_layout">Horizontal</string>
    <string name="title_vertical_layout">Vertical</string>
    <string name="title_text_color">Color</string>
    <string name="title_text_rotate">Angle</string>
    <string name="request_permission_failed">Failed to get permission</string>
    <string name="about_title_about">About</string>
    <string name="about_title_info">Information</string>
    <string name="about_title_output">Output format</string>
    <string name="about_title_version">Version</string>
    <string name="about_title_rating">Rate our app</string>
    <string name="about_title_feed_back">Feedback</string>
    <string name="about_title_update_log">Changelog</string>
    <string name="about_title_open_source">Open source licenses</string>
    <string name="error_not_img">Please select an image</string>
    <string name="error_file_not_found">The image couldn\'t be opened or was not selected</string>
    <string name="dialog_export_to_gallery">Export to the album</string>
    <string name="share">Share</string>
    <string name="water_mark_mode_text">Text</string>
    <string name="water_mark_mode_image">Icon</string>
    <string name="tips_ok">Confirm</string>
    <string name="tips_cancel_output">Cancel</string>
    <string name="tips_need_compress_img">Insufficient storage or the image is too large</string>
    <string name="tips_compressing">Compressing…</string>
    <string name="tips_compress_images">Compress picture</string>
    <string name="tips_compress_ok">Finished compressing. Click OK to continue the export.</string>
    <string name="tips_compress_create_uri_failed">Finished compressing, but failed to create the Uri. Please restart the app and try again. %1$s</string>
    <string name="tips_tip_title">Crash detected</string>
    <string name="msg_crash">Would you like to report this crash? This can help us improve the app! This will not collect any personal information.</string>
    <string name="crash_mail">Send email</string>
    <string name="tip_not_mail_found">No email client detected. Alternatively, you can paste the error message to the app store or GitHub.</string>
    <string name="config_default_water_mark_text">👋 DO NOT REDISTRIBUTE</string>
    <string name="style_alpha">Alpha</string>
    <string name="tips_not_app_can_open_images">No file manager detected.</string>
    <string name="tips_choose_other_file_type">Invalid image</string>
    <string name="error_save_oom">Insufficient memory, please clean up the background and try again</string>
    <string name="dev_comment">Any sufficiently advanced technology is indistinguishable from magic.</string>
    <string name="dialog_title_exist_confirm">Warning</string>
    <string name="dialog_cancel_exist_confirm">Cancel</string>
    <string name="dialog_content_exist_confirm">Discard changes?</string>
    <string name="about_title_privacy_statement" translatable="false">Privacy Statement</string>
    <string name="about_title_privacy_statement_zh" translatable="false">隐私政策</string>
    <string name="open_source_desc_color_picker" translatable="false"><![CDATA[ColorPickerView implements getting HSV colors, ARGB values, Hex color codes from any image drawables or your gallery pictures by tapping on the desired color. Supports alpha & brightness slider bar, dialog, and saving & restoring selected data.]]></string>
    <string name="open_source_desc_about_lib" translatable="false">Glide is a fast and efficient open source media management and image loading framework for Android that wraps media decoding, memory and disk caching, and resource pooling into a simple and easy to use interface.</string>
    <string name="open_source_desc_material_components" translatable="false">Material Components for Android (MDC-Android) help developers execute Material Design. Developed by a core team of engineers and UX designers at Google, these components enable a reliable development workflow to build beautiful and functional Android apps.Material Components for Android is a drop-in replacement for Android\'s Design Support Library.</string>
    <string name="email_subject" translatable="false">[EasyWaterMark] Crash info</string>
    <string name="open_source_desc_compressor" translatable="false">"Compressor is a lightweight and powerful android image compression library. Compressor will allow you to compress large photos into smaller sized photos with very less or negligible loss in quality of the image. "</string>
    <!--    -->
    <string name="text_paint_fill">Fill</string>
    <string name="text_paint_stroke">Stroke</string>
    <string name="text_typeface_normal">Normal</string>
    <string name="text_typeface_bold">Bold</string>
    <string name="text_typeface_italic">Italic</string>
    <string name="text_typeface_bold_italic">Bold Italic</string>
    <string name="dialog_save_export_list_title">Export list(%1$s)</string>
    <string name="dialog_open_in_gallery">View in gallery</string>
    <string name="dialog_save_config_format">Format</string>
    <string name="dialog_save_config_quality">Quality</string>
    <string name="dialog_save_exporting">Exporting</string>
    <string name="tips_pick_image">Choose Images</string>
    <string name="pick_via_system">more…</string>
    <string name="recovery_title">Recovery Mode</string>
    <string name="copy_success">Copy success</string>
    <string name="copy_failed">Copy failed</string>
    <string name="store_not_found">No store is installed\?</string>
    <string name="recovery_mode_closed">It\'s closed, please try again</string>
    <string name="copy">Copy error message</string>
    <string name="recovery_mode_tips">Entered recovery mode due to multiple crashes. Sending the device and crash info below via the following methods may resolve the issue. Thank you.</string>
    <string name="turn_off_recovery_mode">Turn off recovery mode</string>
    <string name="tips_input_text_can_not_be_empty">Content cannot be empty</string>
    <string name="back">Back</string>
    <string name="dialog_title_template_edit">Edit Template</string>
    <string name="dialog_title_edit_watermark">Edit watermark</string>
    <string name="dialog_title_template_title">Template List</string>
    <string name="tips_list_empty">Look pretty empty</string>
    <string name="dialog_button_add_template">Add</string>
    <string name="tips_use_this_template">Use this template\?</string>
    <string name="tips_delete_template">Delete the entry\?</string>
    <string name="tips_database_init_error">Database init failed.</string>
    <string name="tile_mode_title_repeat">Repeat</string>
    <string name="tile_mode_title_decal">Single</string>
    <string name="aa">Aa!</string>
    <string name="send_email">Send email</string>
    <string name="send_telegram">Send Telegram</string>
    <string name="jump_to_store">Jump to Store</string>
    <string name="colorpickerview">ColorPickerView</string>
    <string name="glide">Glide</string>
    <string name="material_components_for_android">Material Components for Android</string>
    <string name="compressor">Compressor</string>
    <string name="developed_with_by_rosu">Developed with ♥ by rosu</string>
    <string name="force_open_dynamic_color_support">Force Open Dynamic Color Support</string>
    <string name="show_bounds">Show Bounds</string>
    <string name="more_apps">More apps</string>
    <string name="you_ll_need_to_close_and_restart_the_app_to_switch_themes">You\'ll need to close and restart the app to switch themes</string>
</resources>
